// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Spinner > it renders correctly 1`] = `
<div>
  <svg
    aria-busy="true"
    aria-label="loading"
    class="lucide lucide-loader grid place-items-center animate-spin text-accent-foreground size-8"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 2v4"
    />
    <path
      d="m16.2 7.8 2.9-2.9"
    />
    <path
      d="M18 12h4"
    />
    <path
      d="m16.2 16.2 2.9 2.9"
    />
    <path
      d="M12 18v4"
    />
    <path
      d="m4.9 19.1 2.9-2.9"
    />
    <path
      d="M2 12h4"
    />
    <path
      d="m4.9 4.9 2.9 2.9"
    />
  </svg>
  <span
    class="sr-only"
  >
    Loading...
  </span>
</div>
`;

exports[`Spinner > renders correctly with size: default 1`] = `
<div>
  <svg
    aria-busy="true"
    aria-label="loading"
    class="lucide lucide-loader grid place-items-center animate-spin text-accent-foreground size-8"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 2v4"
    />
    <path
      d="m16.2 7.8 2.9-2.9"
    />
    <path
      d="M18 12h4"
    />
    <path
      d="m16.2 16.2 2.9 2.9"
    />
    <path
      d="M12 18v4"
    />
    <path
      d="m4.9 19.1 2.9-2.9"
    />
    <path
      d="M2 12h4"
    />
    <path
      d="m4.9 4.9 2.9 2.9"
    />
  </svg>
  <span
    class="sr-only"
  >
    Loading...
  </span>
</div>
`;

exports[`Spinner > renders correctly with size: lg 1`] = `
<div>
  <svg
    aria-busy="true"
    aria-label="loading"
    class="lucide lucide-loader grid place-items-center animate-spin text-accent-foreground size-12"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 2v4"
    />
    <path
      d="m16.2 7.8 2.9-2.9"
    />
    <path
      d="M18 12h4"
    />
    <path
      d="m16.2 16.2 2.9 2.9"
    />
    <path
      d="M12 18v4"
    />
    <path
      d="m4.9 19.1 2.9-2.9"
    />
    <path
      d="M2 12h4"
    />
    <path
      d="m4.9 4.9 2.9 2.9"
    />
  </svg>
  <span
    class="sr-only"
  >
    Loading...
  </span>
</div>
`;

exports[`Spinner > renders correctly with size: sm 1`] = `
<div>
  <svg
    aria-busy="true"
    aria-label="loading"
    class="lucide lucide-loader grid place-items-center animate-spin text-accent-foreground size-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 2v4"
    />
    <path
      d="m16.2 7.8 2.9-2.9"
    />
    <path
      d="M18 12h4"
    />
    <path
      d="m16.2 16.2 2.9 2.9"
    />
    <path
      d="M12 18v4"
    />
    <path
      d="m4.9 19.1 2.9-2.9"
    />
    <path
      d="M2 12h4"
    />
    <path
      d="m4.9 4.9 2.9 2.9"
    />
  </svg>
  <span
    class="sr-only"
  >
    Loading...
  </span>
</div>
`;

exports[`Spinner > renders correctly with variant: default 1`] = `
<div>
  <svg
    aria-busy="true"
    aria-label="loading"
    class="lucide lucide-loader grid place-items-center animate-spin text-accent-foreground size-8"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 2v4"
    />
    <path
      d="m16.2 7.8 2.9-2.9"
    />
    <path
      d="M18 12h4"
    />
    <path
      d="m16.2 16.2 2.9 2.9"
    />
    <path
      d="M12 18v4"
    />
    <path
      d="m4.9 19.1 2.9-2.9"
    />
    <path
      d="M2 12h4"
    />
    <path
      d="m4.9 4.9 2.9 2.9"
    />
  </svg>
  <span
    class="sr-only"
  >
    Loading...
  </span>
</div>
`;

exports[`Spinner > renders correctly with variant: primary 1`] = `
<div>
  <svg
    aria-busy="true"
    aria-label="loading"
    class="lucide lucide-loader grid place-items-center animate-spin text-primary-foreground size-8"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 2v4"
    />
    <path
      d="m16.2 7.8 2.9-2.9"
    />
    <path
      d="M18 12h4"
    />
    <path
      d="m16.2 16.2 2.9 2.9"
    />
    <path
      d="M12 18v4"
    />
    <path
      d="m4.9 19.1 2.9-2.9"
    />
    <path
      d="M2 12h4"
    />
    <path
      d="m4.9 4.9 2.9 2.9"
    />
  </svg>
  <span
    class="sr-only"
  >
    Loading...
  </span>
</div>
`;
